# explainer-studio

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
channel/: playlists.md
docs/: booth-upgrade-plan.md  magnific-imagegen-plan.md  motion-upgrade-plan.md  youtube-publish-setup.md
docs/examples/: blueprint-first-saas-customers.md
experiments/remotion-pilot/: .gitignore  package-lock.json  package.json  remotion.config.ts
experiments/remotion-pilot/src/: DataViz.tsx  Root.tsx  Short.tsx  captions.json  dataviz-captions.json
remotion/: .gitignore  motion-lab.json  package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion/src/: Root.tsx  Thumbnail.tsx  Video.tsx  brand.ts  schema.ts
remotion/src/components/: Annotate.tsx  Audio.tsx  Background.tsx  CTA.tsx  Captions.tsx  DataViz2.tsx  Extras.tsx  Hero3D.tsx  KeepCard.tsx  KineticHook.tsx  Media.tsx  PaperSting.tsx  Schematic.tsx  StatCounter.tsx  StatGrid.tsx  TalkingScene.tsx  TextScenes.tsx  colorize.tsx
skills/explainer2/: SKILL.md
skills/explainer2/references/: article-playbook.md  (+11 more)
src/explainer2/: __init__.py  brand.py  cli.py  contenttypes.py  deckbuild.py  handoff.py  ingest.py  learn.py  lexicon.py  manifest.py  presets.py  project.py  promote.py  publish.py  qa.py  recorder.py  remotion_engine.py  renderlock.py  shorts.py  stills.py  stockassist.py  talktime.py  themes.py  validate.py  wiki.py
tools/: clean_matte.py  copy_music_license.py  cutout.py  deck_census.py  html2png.py  imagegen.py  import_doodles.py  launch_booth.py  recording_watcher.py  simulate_takes.py
(+33 files in other folders)
